2000-10-17  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* inclhack.def (hpux_maxint): Also apply fix to values.h.
	* fixincl.x: Rebuilt.

2000-10-17  Alexandre Oliva  <aoliva@redhat.com>

	* genrecog.c (write_switch): Return the first condition that needs a
	label.

2000-10-17  Bernd Schmidt  <bernds@redhat.co.uk>

	* c-tree.h (warn_sequence_point): Move declaration to...
	* c-common.h (warn_sequence_point): ... here.
	* c-decl.c (warn_sequence_point): Move definition to...
	* c-common.c (warn_sequence_point): ... here.
	(struct reverse_tree): New.
	(reverse_list, reverse_max_depth): New static variables.
	(build_reverse_tree, common_ancestor, modify_ok
	verify_sequence_points): New functions.
	(c_expand_expr_stmt): Call verify_sequence_points if -Wsequence-point.
	* c-typeck.c (check_modify_expr): Delete.
	(build_modify_expr): Don't call it.

2000-10-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-common.h (warn_missing_format_attribute): New variable.
	* c-decl.c (warn_missing_format_attribute): New variable.
	(c_decode_option): Decode -Wmissing-format-attribute and
	-Wno-missing-format-attribute.
	* c-common.c (check_function_format): If
	-Wmissing-format-attribute, give a warning where a vprintf or
	vscanf function is called by a function without its own printf or
	scanf attribute.
	* toplev.c (documented_lang_options): Add
	-Wmissing-format-attribute.
	* invoke.texi: Document -Wmissing-format-attribute.

2000-10-17  Marc Espie <espie@openbsd.org>

	* invoke.texi (-shared): Insist on requiring code generation flags
	to be used along with -shared, and document the subtle failure that
	may occur otherwise.

>>>>>>> 1.7984
2000-10-16  J. David Anglin  <dave@hiauly1.hia.nrc.ca>

	* pa.md (return_internal): Move `use' after `return'.

2000-10-16 Theodore Papadopoulo <Theodore.Papadopoulo@sophia.inria.fr>

	* machmode.def: Correct comment.

2000-10-16  Rodney Brown  <RodneyBrown@mynd.com>

	* print-rtl.c (print_rtx_head): Constify.
	* rtl.h (print_rtx_head): Similarly.